--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@
     margin: auto;
 }
 
+.empty-info {
+    margin-top: 200px;
+    text-align: center;
+    color: rgb(188, 188, 188);
+}
+
 @keyframes modal-animation {
     0% {
         top: -70%;
@@ -94,6 +100,51 @@
     border: 2px solid #bc1212;
 }
 
+
+/* Tech Stack Design */
+.tech-stack {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    top: 25%;
+    left: 42%;
+    
+    width: 300px;
+    height: 120px;
+    padding: 25px;
+
+    text-align: left;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, .25);
+}
+
+.tech-stack.hidden {
+    display: none;
+}
+
+.tech-stack .head {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.tech-stack .head .close {
+    cursor: pointer;
+}
+
+.tech-stack p {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.tech-stack .logo {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
 main  {
     height: 100vh;
 }
@@ -106,8 +157,18 @@ header {
     justify-content: space-between;
 }
 
-header p {
+header a {
+    font-size: 14px;
     font-weight: 300;
+    padding: 7px 15px;
+    border-radius: 50px;
+    color: #111;
+    text-decoration: none;
+}
+
+header a:hover {
+    color: white;
+    background-color: #111;
 }
 
 section.account {
@@ -147,10 +208,11 @@ section.account table thead {
 }
 
 section.account table thead tr td {
-    font-weight: 500;
+    font-weight: 400;
+    font-size: 13px;
     padding: 10px 15px;
     box-sizing: border-box;
-    background-color: rgb(225, 225, 225)
+    background-color: rgb(231, 231, 231)
 }
 
 section.account table thead tr td:first-child {
@@ -170,7 +232,7 @@ section.account table tbody tr td {
 section.account table tbody tr td button {
     cursor: pointer;
     color: white;
-    font-size: 15px;
+    font-size: 14px;
     padding: 6px 15px;
     box-sizing: border-box;
     background-color: #cc1414;
