--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,21 @@
     margin: auto;
 }
 
-.empty-info {
+.empty-state {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     margin-top: 200px;
-    text-align: center;
-    color: rgb(188, 188, 188);
+}
+
+.empty-state.hidden {
+    display: none;
+}
+
+.empty-info {
+    width: 250px;
+    margin-bottom: 200px;
 }
 
 @keyframes modal-animation {
@@ -45,23 +56,33 @@
 
 .add-modal h1 {
     font-size: 26px;
-    font-weight: 400;
+    font-weight: 500;
 }
 
 .add-modal form {
     margin-top: 30px;
 }
 
+.add-modal form label {
+    font-size: 14px;
+    color: rgb(55, 55, 55);
+}
+
 .add-modal form input {
     width: 100%;
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
 
     padding: 10px;
     box-sizing: border-box;
     border-radius: 3px;
-    border: 1px solid grey;
+    border: 1px solid rgb(234, 234, 234);
     transition: .3s ease-in-out;
+    background-color: rgb(234, 234, 234);
+}
+
+.add-modal form input::placeholder {
+    font-weight: 300;
 }
 
 .add-modal form input:focus {
@@ -70,14 +91,13 @@
 }
 
 .add-modal form .buttons {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(2, 1fr);
 }
 
 .add-modal form button {
     width: 100%;
-    margin: 0 10px;
     margin-top: 40px;
     cursor: pointer;
     color: white;
@@ -100,8 +120,19 @@
     border: 2px solid #bc1212;
 }
 
-
 /* Tech Stack Design */
+@keyframes animation-tech {
+    0% {
+        opacity: 0;
+        top: 80%;
+    }
+
+    100%{
+        opacity: 1;
+        top: 25%;
+    }
+}
+
 .tech-stack {
     display: flex;
     flex-direction: column;
@@ -109,6 +140,7 @@
     position: absolute;
     top: 25%;
     left: 42%;
+    opacity: 1;
     
     width: 300px;
     height: 120px;
@@ -118,6 +150,8 @@
     border-radius: 10px;
     background-color: white;
     box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, .25);
+
+    animation: animation-tech .5s ease-in-out;
 }
 
 .tech-stack.hidden {
