--- a/src/index.css
+++ b/src/index.css
@@ -63,12 +63,12 @@
     margin-top: 30px;
 }
 
-.add-modal form div.reset.disabled {
+.add-modal form button.reset.disabled {
     cursor: not-allowed;
     opacity: .4;
 }
 
-.add-modal form div.reset.disabled:hover {
+.add-modal form button.reset.disabled:hover {
     border: 1px solid rgb(234, 234, 234);
     background-color: rgb(234, 234, 234);
 }
